syntax = "proto3";

package wackytracky.clientapi.v1;

option go_package = "github.com/wacky-tracky/wacky-tracky-server/gen/wacky-tracky/clientapi/v1;clientv1";

message List {
	string id = 1;
	string title = 2;
	int32 count_items = 3;
}

message GetListsRequest {}
message GetListsResponse {
	repeated List lists = 1;
}

message CreateListRequest {
	string title = 1;
}

message CreateListResponse{}

message CreateTaskRequest {
	string content = 1;
}

message CreateTaskResponse {
	Task task = 1;
}

message DeleteTaskRequest {
	string content = 1;
}

message DeleteTaskResponse {}


message Tag {
	string id = 1;
	string title = 2;
}

message TagRequest {}
message TagResponse {}

message GetTagsRequest{}
message GetTagsResponse{
	repeated Tag tags = 1;
}

message Task {
	string id = 1;
	string content = 2;
	string parent_id = 3;
	string parent_type = 4;
	int32 count_subitems = 5;
}

message ListTasksRequest {
	string parent_id = 1;
	string parent_type = 2;
}

message ListTasksResponse {
	repeated Task tasks = 1;
}

message UpdateList {}
message UpdateListRequest {}
message UpdateListResponse {}

message InitRequest {}
message InitResponse {
	string wallpaper = 1;
}

message VersionRequest {}
message VersionResponse {
	string version = 1;
	string commit = 2;
	string date = 3;
}

service WackyTrackyClientService {
	rpc Version(VersionRequest) returns (VersionResponse) {}

	rpc Init(InitRequest) returns (InitResponse) {}

	rpc GetLists(GetListsRequest) returns (GetListsResponse) {}

	rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}

	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}

	rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}

	rpc CreateList(CreateListRequest) returns (CreateListResponse) {}

	rpc Tag(TagRequest) returns (TagResponse) {}

	rpc UpdateList(UpdateListRequest) returns (UpdateListResponse) {}

	rpc GetTags(GetTagsRequest) returns (GetTagsResponse) {}
}
